--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "engines":{
+  "engines": {
     "node": "8.6.0"
   },
   "scripts": {
-    "start": "node server.js" ,
+    "start": "node server.js",
     "dev": "concurrently 'nodemon server.js' 'cd client && npm start'",
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "cd client && npm install && npm run build"
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/raisking/ga-project-three#readme",
   "dependencies": {
+    "axios": "^0.16.2",
     "body-parser": "^1.18.2",
     "concurrently": "^3.5.0",
     "dotenv": "^4.0.0",
