--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "concurrently": "^3.5.0",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
-    "mongoose": "^4.12.1"
+    "mongoose": "^4.12.1",
+    "react-router": "^4.2.0"
   }
 }
